# cloud-sdk-python

./: .env_integration_tests.example  pyproject.toml
.github/workflows/: build.yaml  check-version-bump.yaml  commit-validation.yaml  integration-tests.yml  proto-verify.yaml  release-internal.yml  release.yml  reuse.yaml  sync.yaml  test.yaml
docs/: INTEGRATION_TESTS.md
src/sap_cloud_sdk/agent_memory/: config.py  user-guide.md
src/sap_cloud_sdk/agent_memory/factory/: __init__.py  _timed_memory.py  langgraph_checkpoint.py
src/sap_cloud_sdk/agentgateway/: __init__.py  _customer.py  _fragments.py  _lob.py  _models.py  _token_cache.py  agw_client.py  converters.py  user-guide.md
src/sap_cloud_sdk/aicore/: user-guide.md
src/sap_cloud_sdk/core/auditlog_ng/: __init__.py  user-guide.md
src/sap_cloud_sdk/core/data_anonymization/: _http_transport.py
src/sap_cloud_sdk/core/telemetry/: operation.py
src/sap_cloud_sdk/destination/: __init__.py  _models.py  certificate_client.py  client.py  fragment_client.py  user-guide.md
src/sap_cloud_sdk/extensibility/: _ums_transport.py  client.py
tests/agent_memory/unit/: test_client.py  test_config.py  test_langgraph_checkpointer.py  test_timed_memory.py
tests/agentgateway/integration/: agw_auth.feature  test_agw_bdd.py
tests/agentgateway/unit/: test_agw_client.py  test_config.py  test_converters.py  test_customer.py  test_lob.py  test_models.py  test_token_cache.py
tests/core/unit/auditlog_ng/unit/: test_create_client.py
tests/core/unit/data_anonymization/: test_http_transport.py
tests/core/unit/telemetry/: test_operation.py
tests/destination/integration/: destination.feature  test_destination_bdd.py
tests/destination/unit/: test_client.py  test_init.py
tests/extensibility/unit/: test_ums_transport.py
